--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,3 +7,10 @@
 
 // Bootstrap
 @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+
+// Font-Awesome
+@import "node_modules/font-awesome/scss/font-awesome";
+
+body {
+    background-color: #fff;
+}
